--- a/app/views/notifications/_notification.html.erb
+++ b/app/views/notifications/_notification.html.erb
@@ -2,11 +2,23 @@
 <% visited = notification.visited %> 
 <div class="col-md-6.mx-auto">
   <div class="form-inline">
-    <% if notification.post.user_id == visited.id %> 
-      <%= visitor.name %>さんが
+    <%= visitor.name %>さんが
+    <% case notification.action %>
+      <% when "like" then %>
       <%= link_to "あなたの投稿", notification.post, style: "font-weight: bold;" %> 
       にいいねしました
-    <% end %>
+      <% when "comment" then %>
+        <% if notification.post.user_id == visited.id %>
+          <%= link_to "あなたの投稿", notification.post, style: "font-weight: bold;" %>
+          にコメントしました 
+        <% else %>
+          <%= link_to post_path(notification.post) do %>
+          <% end %>
+        <% end %>
+      <% end %>
+
+
+    
     <div class="small.text-muted.text-right">
       <%= time_ago_in_words(notification.created_at).upcase %>前
     </div>
