--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,36 +1,1 @@
-<h1>お問い合わせ</h1>
-<h4>※本番環境でのメール送信機能については現在実装中です。</h4>
-<hr>
-<div class="info1">お問い合わせがある方は以下にご連絡ください。</div>
-<div class="info2">サイト作成者Twitterアカウント：<%= link_to "@kosukengineer", "https://twitter.com/kosukengineer" %></div>
-
-
-<!--
-  <div class="sub flame">
-    <%= form_with(model: @contact, local: true, class:"form-horizontal") do |f| %>
-
-      <div class="form-group">
-        <%= f.label :ユーザー名, class:"col-sm-2 control-label" %>
-        <div class="col-sm-10">
-          <%= f.text_field :name, class: "form-control", placeholder:"ユーザー名を入力してください。" %>	
-        </div>
-      </div>
-
-      <div class="form-group">
-        <%= f.label :メールアドレス, class:"col-sm-2 control-label" %>
-        <div class="col-sm-10">
-          <%= f.text_field :email, class: "form-control", placeholder:"ユーザー名を入力してください。" %>	
-        </div>
-      </div>
-      
-      <div class="form-group">
-        <%= f.label :お問い合わせ内容, class:"col-sm-2 control-label" %>
-        <div class="col-sm-10">
-          <%= f.text_area :message, class: "form-control", placeholder:"お問い合わせ内容を入力してください。" %>	
-        </div>
-      </div>
-
-      <%= f.submit "確認", class:"btn btn-primary btn-block" %>
-    <% end %>
-  </div>
--->
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeseniGfveIPeabT0WVO2NDAYC8-iDiPCsWgGjrbFvAnbqdOA/viewform?embedded=true" width="640" height="852" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
