--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,7 @@
       </div>
     <%= render "layouts/footer" %>
     <%= render "shared/please_login" %>
+    <div class="side-bg"></div>
   </body>
   </html>
   <%= javascript_pack_tag "main" %>
