--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -47,8 +47,10 @@ main{
   z-index: 1;
   position: absolute;
   top: 60px;
-  left: 10px;
+  right: 20px;
   display: none;
+  font-weight: 700;
+  font-size: 18px;
 }
 
 h1{
@@ -86,38 +88,64 @@ h4{
 
 //ヘッダー
 header{
+  display: flex;
   z-index: 1000;
- .logo{
-   color: #fff;
-   font-size: 30px;
-   text-decoration: none;
-   }
+}
+
+.logo {
+  margin: 0 auto;
+  a{
+    color: #fff;
+    font-size: 30px;
+    text-decoration: none;
+    user-select: none;
+  }
+
 }
 
 .navbar{
  background-color: #5472cd;
 }
 
-.navbar-nav{  
- padding-right: 15px;
- a{
-   color: #fff !important;
- }
- a:hover{
-   background-color: #fff !important;
-   color: #5472cd !important;
- }
-}
-
-.dropdown-menu{
- background-color: #5472cd;
- a:hover{
-   color: #5472cd !important;
- }
-}
-
 .btn-block{
  margin-top: 15px;
+}
+
+#ham-menu{
+  position: fixed;
+  top: 0;
+  left: -300px;
+  background-color: #5472cd;
+  width: 300px;
+  height: 100%;
+  padding: 10px 40px;
+  z-index: 1000;
+  opacity: 0.9;
+  a{
+    color: #fff;
+  }
+}
+.open-side{
+  position: fixed;
+  top: 10px;
+  left: 5px;
+}
+
+input[type="checkbox"]{
+  position: absolute;
+  left: -50vw;
+}
+
+.side-bg{
+  background-color:#558;
+  width:100vw;
+  height:100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 3;
+  opacity: 0;
+  display: none;
 }
 
 
