Fixed a subtle error during screen transitions

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,4 +6,7 @@
   <div class="logo">
     <%= link_to "Sharing Portfolio", root_path %>
   </div>
+  <div class="">
+    <%= link_to "ログイン", new_session_path , style:"color:#fff;" %>
+  </div>
 </header>
