--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -57,6 +57,18 @@ main{
   font-size: 18px;
 }
 
+.alert-notice{
+  color: #3c763d;
+  background-color: #dff0d8;
+  border-color: #d6e9c6;
+}
+
+.alert-alert{
+  color: #a94442;
+  background-color: #f2dede;
+  border-color: #ebccd1;
+}
+
 h1{
  text-align: center;
  width: 50%;
