--- a/app/views/shared/_please_login.html.erb
+++ b/app/views/shared/_please_login.html.erb
@@ -9,7 +9,7 @@
         <%= link_to "ユーザー登録をする（無料）", new_user_path, class:"close-modal-link" %>
       </div>
       <div>既にアカウントを持っている方はこちら<br>
-        <%= link_to "ログインする", new_session_path,  class:"close-modal-link" %>
+        <%= link_to "ログインする", new_user_session_path,  class:"close-modal-link" %>
       </div>
     </div>
   </div>
