--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -32,6 +32,6 @@
     <%= f.submit "登録", class:"btn btn-primary btn-block" %>
   <% end %>
   <div class="already">既にアカウントをお持ちの方は
-  <%= link_to "こちら", new_session_path %>
+  <%= link_to "こちら", "#" %>
   </div>
 </div>
