--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,8 +4,28 @@
     <%= render "devise/shared/error_messages", resource: resource %>
 
     <div class="form-group">
+      <%= f.label :name %>
+      <%= f.text_field :name, autofocus: true, autocomplete: "off", class: "form-control", placeholder:"ユーザー名を入力してください。" %>
+    </div>
+
+    <div class="form-group">
       <%= f.label :email %>
       <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", placeholder:"メールアドレスを入力してください。" %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :profile %>
+      <%= f.text_area :profile, autofocus: true, autocomplete: "off", class: "form-control", placeholder:"自己紹介文を入力してください。(500字以内)" %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :twitter_link %>
+      <%= f.text_field :twitter_link, autofocus: true, autocomplete: "off", class: "form-control", placeholder:"Twitterリンクを入力してください。(500字以内)" %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :github_link %>
+      <%= f.text_field :github_link, autofocus: true, autocomplete: "off", class: "form-control", placeholder:"GitHubリンクを入力してください。(500字以内)" %>
     </div>
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
@@ -13,7 +33,7 @@
     <% end %>
 
     <div class="form-group">
-      <%= f.label :password %> <i>(変更したくない場合は空白にしてください)</i>
+      <%= f.label :password %> <i>(変更したくない場合は空白にしてください。)</i>
       <%= f.password_field :password, autocomplete: "new-password", class: "form-control", placeholder:"パスワードを入力してください。" %>
       <% if @minimum_password_length %>
         <em><%= @minimum_password_length %> 文字以上</em>
