--- a/app/views/shared/_please_login.html.erb
+++ b/app/views/shared/_please_login.html.erb
@@ -6,7 +6,7 @@
     <div id="login-form">
       <h2>サービスを閲覧、いいね、コメントなどするにはログインが必要です。</h2>
       <div>
-        <%= link_to "ユーザー登録をする（無料）", new_user_path, class:"close-modal-link" %>
+        <%= link_to "ユーザー登録をする（無料）", new_user_registration_path, class:"close-modal-link" %>
       </div>
       <div>既にアカウントを持っている方はこちら<br>
         <%= link_to "ログインする", new_user_session_path,  class:"close-modal-link" %>
