--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -35,16 +35,10 @@
         <% end %>
       </div>
       <div class="ham-item">
-        <%= link_to "プロフィール編集", edit_user_path(current_user) %>
-      </div>
-      <div class="ham-item">
-        <%= link_to "プロフィール編集(devise)", edit_user_registration_path %>
+        <%= link_to "プロフィール編集", edit_user_registration_path %>
       </div>
       <div>
-        <%= link_to "ログアウト", session_path(current_user), method: :delete %>
-      </div>
-      <div>
-      <%= link_to "ログアウト(devise)", destroy_user_session_path , method: :delete %>
+      <%= link_to "ログアウト", destroy_user_session_path , method: :delete %>
       </div>
       <div>
       <%= current_user.name %>
