--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -31,6 +31,10 @@
       <%= f.submit "登録する", class:"btn btn-primary btn-block" %>
     </div>
   <% end %>
+  
+  <%= link_to user_twitter_omniauth_authorize_path do %>
+    <i class="fab fa-twitter-square fa-2x"></i>
+  <% end %>
 
   <%= render "devise/shared/links" %>
 </div>
