--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -53,7 +53,7 @@
       <%= f.submit "保存する", class:"btn btn-primary btn-block" %>
   <% end %>
 
-  <p><%= button_to "アカウントを削除", registration_path(resource_name), data: { confirm: "本当に削除しますか？" }, method: :delete %></p>
+  <p><%= button_to "アカウントを削除", user_path(current_user), data: { confirm: "本当に削除しますか？" }, method: :delete %></p>
 
   <%= link_to "戻る", :back %>
 </div>
