--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -22,9 +22,8 @@
     <%= f.label :アピールポイント, class:"col-sm-2 control-label" %>
     <%= f.text_area :point, class: "form-control" %>
 
-    <%= f.label :タグ, class:"col-sm-2 control-label" %>
-    <%= f.text_field :tag_ids, class: "form-control", value: @tag_list,\
-    placeholder: "タグをつける。複数つけるには','で区切ってください。"  %>
+    <%= f.label :tag_list, class:"col-sm-2 control-label" %>
+    <%= f.text_field :tag_list, class: "form-control", value: @post.tag_list.join(','), placeholder: "タグをつける。複数つけるには','で区切ってください。", autocomplete:"off"  %>
     
     <%= f.submit "更新する", class:"btn btn-primary btn-block" %>
   <% end %>
