--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -36,10 +36,9 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :タグ %>
-    <%= f.text_field :tag_ids, class: "form-control", id:'tag_ids',\
-    placeholder: "タグをつける。複数つけるには「全角スペース又は半角スペース」で区切ってください。例）ruby rails javascript", autocomplete:"off" %>
-  </div>  
+    <%= f.label :tag_list %>
+      <%= f.text_field :tag_list, value: @post.tag_list.join(','), class: "form-control", placeholder:"タグをつける。複数つけるには','で区切ってください。", autocomplete:"off" %>
+  </div>
   
   <%= f.submit "投稿する", class:"btn btn-primary btn-block" %>
 <% end %>
