--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -32,23 +32,20 @@
       <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
     <% end %>
 
-    <div class="form-group">
-      <%= f.label :password %> <i>(変更したくない場合は空白にしてください。)</i>
-      <%= f.password_field :password, autocomplete: "new-password", class: "form-control", placeholder:"パスワードを入力してください。" %>
-      <% if @minimum_password_length %>
-        <em><%= @minimum_password_length %> 文字以上</em>
-      <% end %>
-    </div>
+    <% if current_user.provider.nil? %>
+      <div class="form-group">
+        <%= f.label :password %> <i>(変更したくない場合は空白にしてください。)</i>
+        <%= f.password_field :password, autocomplete: "new-password", class: "form-control", placeholder:"パスワードを入力してください。" %>
+        <% if @minimum_password_length %>
+          <em><%= @minimum_password_length %> 文字以上</em>
+        <% end %>
+      </div>
 
-    <div class="form-group">
-      <%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control", placeholder:"確認用のパスワードを入力してください。" %>
-    </div>
-
-    <div class="form-group">
-      <%= f.label :current_password %> <i>(変更を確認するには現在のパスワードが必要です。)</i>
-      <%= f.password_field :current_password, autocomplete: "current-password", class: "form-control", placeholder:"確認用のパスワードを入力してください。" %>
-    </div>
+      <div class="form-group">
+        <%= f.label :password_confirmation %><br />
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control", placeholder:"確認用のパスワードを入力してください。" %>
+      </div>
+    <% end %>
 
       <%= f.submit "保存する", class:"btn btn-primary btn-block" %>
   <% end %>
