フォロー機能の実装 + 非同期化  #5

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,11 +8,17 @@
 </div>
 <div class="user-show-profile">
   <h2>
-  <%= @user.name %>
-  <% unless @user.uid.nil? %>
-    <i class="fab fa-twitter"></i>
-  <% end %>
+    <%= @user.name %>
+    <% unless @user.uid.nil? %>
+      <i class="fab fa-twitter"></i>
+    <% end %>
   </h2>
+  <div>
+    <%= render "stats" %>
+  </div>
+  <div>
+    <%= render "follow_form" %>
+  </div>
   <div class="sns-container">
     <% unless @user.twitter_link.blank? %>
       <%= link_to @user.twitter_link, target:"_blank" do %>
