--- a/app/views/shared/_mark.html.erb
+++ b/app/views/shared/_mark.html.erb
@@ -1,3 +1,5 @@
 <% if unchecked_notifications.any? %>
-  <i class="fas fa-bell" style="color:red;"></i>
+  <i class="fas fa-bell" style="color:red; font-size: 30px;"></i>
+<% else %>
+  <i class="fas fa-bell" style="color:#fff; font-size: 30px;"></i>
 <% end %>
