--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -210,10 +210,23 @@ header{
   padding: 10px 40px;
   z-index: 1000;
   opacity: 0.9;
-  a{
-    color: #fff;
+  font-size: 18px;
+  .ham-item{
+    width: 100%;
+    a{
+      color: #fff;
+      width: 220px;
+      display: block;
+      padding: 15px 1rem;
+    }
+    a:hover{
+      text-decoration: none;
+      color: #0000ee;
+    }
   }
 }
+
+
 .open-side{
   position: fixed;
   left: 5px;
