タグ付けのUIを修正(tag-itを導入)  #39

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,6 +2,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+
 //ページ全体
 *{
  margin: 0;
@@ -12,7 +13,7 @@
 }
 
 .total{
-  // display: none;
+  display: none;
 }
 
 iframe{
