タグバー修正 #39

--- a/app/views/shared/_tagbar.html.erb
+++ b/app/views/shared/_tagbar.html.erb
@@ -1,5 +1,9 @@
 <div id="tag-bar" class="inactive">
-  <% @tag_all.limit(30).each do |tag| %>
-    <%= link_to "#{tag.name}(#{tag.taggings_count})", posts_path(tag: tag.name), class:"tag-search" %>
+  <% if @tag_all.present? %>
+    <% @tag_all.limit(30).each do |tag| %>
+      <%= link_to "#{tag.name}(#{tag.taggings_count})", posts_path(tag: tag.name), class:"tag-search" %>
+    <% end %>
+  <% else %>
+    <p style="color: #fff;">登録されているタグはありません。</p>
   <% end %>
 </div>
