--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,8 +1,8 @@
 <h1>新規登録</h1>
 <h4>アカウントをお持ちでない方がユーザーの新規登録を行います。</h4>
-<div class="sub flame">
+<div class="sub1 flame">
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= render "devise/shared/error_messages", resource: resource %>
+    <%= render "users/shared/error_messages", resource: resource %>
 
     <div class="form-group">
       <%= f.label :name %><span class="must"> (必須)</span>
@@ -27,14 +27,28 @@
       <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control", placeholder:"確認用のパスワードを入力してください。" %>
     </div>
 
-    <div class="actions">
-      <%= f.submit "登録する", class:"btn btn-primary btn-block" %>
+    <div class="actions btn-container">
+      <%= f.submit "登録する" ,class:"btn-base"%>
     </div>
   <% end %>
-  
-  <%= link_to user_twitter_omniauth_authorize_path do %>
-    <i class="fab fa-twitter-square fa-2x"></i>
-  <% end %>
 
-  <%= render "devise/shared/links" %>
+  <div class="sub">
+    <div class="twitter-login">
+      <%= link_to user_twitter_omniauth_authorize_path do %>
+        <i class="fab fa-twitter"></i>Twitterで登録する
+      <% end %>
+    </div>
+    <div>
+    <div class="github-login">
+      <%= link_to "#" do %>
+        <i class="fab fa-github"></i>GitHubで登録する
+      <% end %>
+    </div>
+    <div class="guest-login">
+      <%= link_to "ゲストログイン(採用担当者様用)", users_guest_sign_in_path, method: :post %>
+    </div>
+    <div style="text-align:center;">既にアカウントをお持ちの方
+      <%= link_to "ログインはこちら", new_user_session_path, style:"font-weight: 700;" %>
+    </div>
+  </div>
 </div>
