--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,3 @@
 <footer>
-  <ul>
-    <li>© Sharing Portfolio. 2021</li>
-    <li class="li"><%= link_to "お問い合わせ", new_contact_path %></li>
-    <li class="li"><%= link_to "利用規約", term_users_path %></li>
-  </ul>
+  <div>© Sharing Portfolio. 2021</div>
 </footer>
