--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,6 +1,6 @@
 <div id="ham-menu">
   <div class="close-side">
-    <i class="far fa-times-circle" style="font-size:30px; color:#fff;"></i>
+    <i class="far fa-times-circle"></i>
   </div>
   <div class="ham-content">
     <% if user_signed_in? %>
@@ -34,6 +34,12 @@
           <%= link_to "プロフィール編集", edit_user_registration_path %>
         </div>
         <div class="ham-item">
+          <%= link_to "利用規約", term_users_path %>
+        </div>
+        <div class="ham-item">
+          <%= link_to "お問い合わせ", new_contact_path %>
+        </div>
+        <div class="ham-item">
         <%= link_to "ログアウト", destroy_user_session_path , method: :delete %>
         </div>
         <div class="ham-item">
@@ -46,6 +52,12 @@
       </div>
       <div class="ham-item">
         <%= link_to "新規登録", new_user_registration_path %>
+      </div>
+      <div class="ham-item">
+        <%= link_to "利用規約", term_users_path %>
+      </div>
+      <div class="ham-item">
+        <%= link_to "お問い合わせ", new_contact_path %>
       </div>
     <% end %>
   </div>
