--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -3,7 +3,9 @@
   <div class="home-title2"><span>"エンジニア"</span>による<span>"エンジニア"</span>のためのポートフォリオ公開サービス!!</div>
   <div class="home-title3">作成したポートフォリオをみんなに公開しよう!!</div>
   <% unless !current_user.nil? %>
-    <div class="home-button"><%= link_to "今すぐ始める", new_user_registration_path, class:"btn btn-primary" %></div>
+    <div class="btn-container home-btn">
+      <%= link_to "今すぐ始める", new_user_registration_path, class:"btn-base" %>
+    </div>
   <% end %>
 </div>
 <h2>最新作品一覧</h2>
