--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -23,12 +23,12 @@
 
     <div class="form-group">
       <%= f.label :name %><span class="must"> (必須)</span>
-      <%= f.text_field :name, autofocus: true, autocomplete: "off", class: "form-control", placeholder:"ユーザー名を入力してください。" %>
+      <%= f.text_field :name, autocomplete: "off", class: "form-control", placeholder:"ユーザー名を入力してください。" %>
     </div>
 
     <div class="form-group">
       <%= f.label :email %><span class="must"> (必須)</span>
-      <%= f.email_field :email, autofocus: true, autocomplete: "off", class: "form-control", placeholder:"メールアドレスを入力してください。" %>
+      <%= f.email_field :email, autocomplete: "off", class: "form-control", placeholder:"メールアドレスを入力してください。" %>
     </div>
 
     <div class="form-group">
